# merging_app

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  app.py  config.py  constants.py  models.py  monitoring.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  state.py  styles.css  test_app.py  test_matching.py  utils.py
.github/workflows/: ci.yml
connections/: datahub_dask_connector.py  pyarrow_client.py
docs/: conf.py  make.bat  setup.md  usage.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
external_libs/: galp_toolbox-1.0.26-py3-none-any.whl
requirements/: base.txt
sample_dataset/: evaluation_results.json  mapping_rules.json  validation_rules.json
services/: base.py  file_service.py
src/: main.py
src/config/: settings.py
src/core/: data_validator.py  datahub_processor.py  file_processor.py
src/utils/: logging_utils.py  query_utils.py
tests/: __init__.py  conftest.py  test_app.py  test_app_complete.py  test_app_core.py  test_app_extended.py  test_config.py  test_config_loader.py  test_edge_cases.py  test_matching.py  test_monitoring.py  test_pdf_generation.py  test_state.py  test_state_extended.py  test_utils.py  test_utils_extended.py  test_validation.py
ui/: components.py
ui/pages/: base.py  file_upload.py
utils/: __init__.py  config_loader.py  data_validator.py  file_loader.py  logging_config.py  matching.py  profiling.py
validators/: base.py  data_validator.py
(+10 files in other folders)
